--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -1,17 +1,16 @@
-"homepage": "https://Nayana186.github.io/mouse-locator"
 {
   "name": "my-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Nayana186.github.io/mouse-locator",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "firebase": "^12.1.0",
@@ -27,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.0"
+    "vite": "^7.1.0",
+    "gh-pages": "^6.1.1"
   }
 }
